--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,17 +13,20 @@ exclude = ["/tests"]
 license = "MIT"
 
 [dependencies]
-regex = "1.1.0"
-subparse = "0.6.2"
-clap = "2.32.0"
-lazy_static = "1.2.0"
-encoding_rs = "0.8.16"
-anyhow = "1.0.26"
-which = "4.0.2"
-rayon = "1.4.1"
+regex = "1.1"
+subparse = "0.6"
+clap = "2.32"
+lazy_static = "1.2"
+encoding_rs = "0.8"
+anyhow = "1.0"
+which = "4.0"
+rayon = "1.4"
+tempfile = "3.1"
+interprocess = "1.1"
+crossterm = "0.19"
+ctrlc = { version = "3.1", features = ["termination"] }
 
 [dev-dependencies]
-assert_cmd = "1.0.1"
-predicates = "1.0.1"
-tempfile = "3.1.0"
-glob = "0.3.0"
+assert_cmd = "1.0"
+predicates = "1.0"
+glob = "0.3"
